--- a/nemotron_nano_setup.ipynb
+++ b/nemotron_nano_setup.ipynb
@@ -209,10 +209,13 @@
         "print(\"Checking if service is ready...\")\n",
         "for i in range(max_retries):\n",
         "    try:\n",
-        "        response = requests.get('http://localhost:8000/v1/models', timeout=5)\n",
+        "        response = requests.get('http://localhost:8000/v1/health/ready', timeout=5)\n",
         "        if response.status_code == 200:\n",
         "            print(f\"\\n✓ Service is ready! (took {i * retry_interval} seconds)\")\n",
-        "            print(f\"Available models: {response.json()}\")\n",
+        "            # Also check models endpoint\n",
+        "            models_response = requests.get('http://localhost:8000/v1/models', timeout=5)\n",
+        "            if models_response.status_code == 200:\n",
+        "                print(f\"Available models: {models_response.json()}\")\n",
         "            break\n",
         "    except requests.exceptions.RequestException:\n",
         "        pass\n",
