Add thinking mode examples and increase default token limits
- Increased max_tokens from 64/128 to 2048 for better responses
- Added Step 8 with 5 comprehensive thinking mode examples
- Demonstrated /think and /no_think capabilities
- Added min_thinking_tokens and max_thinking_tokens parameters
- Included streaming example with thinking tokens
- Created reusable thinking function for easy experimentation
- Added side-by-side comparison of thinking vs non-thinking modes

--- a/nemotron_nano_setup.ipynb
+++ b/nemotron_nano_setup.ipynb
@@ -252,7 +252,9 @@
         "    \"messages\": [\n",
         "        {\"role\": \"user\", \"content\": \"Which number is larger, 9.11 or 9.8?\"}\n",
         "    ],\n",
-        "    \"max_tokens\": 64\n",
+        "    \"max_tokens\": 2048,  # Increased default for better responses\n",
+        "    \"temperature\": 0.6,\n",
+        "    \"top_p\": 0.95\n",
         "}\n",
         "\n",
         "headers = {\n",
@@ -293,7 +295,7 @@
       "outputs": [],
       "source": [
         "# Custom inference function\n",
-        "def ask_nemotron(question, max_tokens=128):\n",
+        "def ask_nemotron(question, max_tokens=2048, temperature=0.6, top_p=0.95):\n",
         "    url = 'http://localhost:8000/v1/chat/completions'\n",
         "    \n",
         "    payload = {\n",
@@ -301,7 +303,9 @@
         "        \"messages\": [\n",
         "            {\"role\": \"user\", \"content\": question}\n",
         "        ],\n",
-        "        \"max_tokens\": max_tokens\n",
+        "        \"max_tokens\": max_tokens,\n",
+        "        \"temperature\": temperature,\n",
+        "        \"top_p\": top_p\n",
         "    }\n",
         "    \n",
         "    response = requests.post(url, json=payload, headers={'Content-Type': 'application/json'})\n",
@@ -323,7 +327,309 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Cleanup (Optional)\n",
+        "## Step 8: Thinking Mode - A Unique Capability!\n",
+        "\n",
+        "**Important:** Nemotron Nano 9B v2 has a special thinking capability that allows it to reason through problems before answering.\n",
+        "\n",
+        "- **By default, the model thinks** unless you explicitly disable it\n",
+        "- To **enable thinking explicitly**, add `\"/think\"` to the system message\n",
+        "- To **disable thinking**, add `\"/no_think\"` to the front of your prompt\n",
+        "- You can control thinking with `min_thinking_tokens` and `max_thinking_tokens` parameters\n",
+        "\n",
+        "Let's explore this powerful feature!\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "### Example 1: Thinking Mode (Explicit)\n",
+        "# With /think in system message, the model will reason through the problem\n",
+        "\n",
+        "url = 'http://localhost:8000/v1/chat/completions'\n",
+        "\n",
+        "payload = {\n",
+        "    \"model\": \"nvidia/nvidia-nemotron-nano-9b-v2\",\n",
+        "    \"messages\": [\n",
+        "        {\"role\": \"system\", \"content\": \"/think\"},\n",
+        "        {\"role\": \"user\", \"content\": \"If a train travels 120 miles in 2 hours, then slows down and travels 90 miles in 3 hours, what is its average speed for the entire journey?\"}\n",
+        "    ],\n",
+        "    \"temperature\": 0.6,   \n",
+        "    \"top_p\": 0.95,\n",
+        "    \"max_tokens\": 2048,\n",
+        "    \"min_thinking_tokens\": 512,\n",
+        "    \"max_thinking_tokens\": 2048,\n",
+        "    \"stream\": False\n",
+        "}\n",
+        "\n",
+        "print(\"🧠 THINKING MODE - Asking the model to solve a problem...\\n\")\n",
+        "response = requests.post(url, json=payload, headers={'Content-Type': 'application/json'})\n",
+        "\n",
+        "if response.status_code == 200:\n",
+        "    result = response.json()\n",
+        "    print(\"=\" * 80)\n",
+        "    print(\"Model's Response (with internal reasoning):\")\n",
+        "    print(\"=\" * 80)\n",
+        "    print(result['choices'][0]['message']['content'])\n",
+        "    print(\"\\n\" + \"=\" * 80)\n",
+        "    print(f\"Usage stats: {json.dumps(result.get('usage', {}), indent=2)}\")\n",
+        "    print(\"=\" * 80)\n",
+        "else:\n",
+        "    print(f\"Error: {response.status_code} - {response.text}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "### Example 2: No-Thinking Mode\n",
+        "# With /no_think prefix, the model responds directly without reasoning\n",
+        "\n",
+        "payload_no_think = {\n",
+        "    \"model\": \"nvidia/nvidia-nemotron-nano-9b-v2\",\n",
+        "    \"messages\": [\n",
+        "        {\"role\": \"user\", \"content\": \"/no_think If a train travels 120 miles in 2 hours, then slows down and travels 90 miles in 3 hours, what is its average speed for the entire journey?\"}\n",
+        "    ],\n",
+        "    \"temperature\": 0.6,   \n",
+        "    \"top_p\": 0.95,\n",
+        "    \"max_tokens\": 2048,\n",
+        "    \"stream\": False\n",
+        "}\n",
+        "\n",
+        "print(\"💨 NO-THINKING MODE - Direct response without reasoning...\\n\")\n",
+        "response = requests.post(url, json=payload_no_think, headers={'Content-Type': 'application/json'})\n",
+        "\n",
+        "if response.status_code == 200:\n",
+        "    result = response.json()\n",
+        "    print(\"=\" * 80)\n",
+        "    print(\"Model's Response (direct, no reasoning):\")\n",
+        "    print(\"=\" * 80)\n",
+        "    print(result['choices'][0]['message']['content'])\n",
+        "    print(\"\\n\" + \"=\" * 80)\n",
+        "    print(f\"Usage stats: {json.dumps(result.get('usage', {}), indent=2)}\")\n",
+        "    print(\"=\" * 80)\n",
+        "else:\n",
+        "    print(f\"Error: {response.status_code} - {response.text}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "### Example 3: Side-by-Side Comparison\n",
+        "# Let's compare thinking vs no-thinking on a challenging problem\n",
+        "\n",
+        "def compare_thinking_modes(question):\n",
+        "    \"\"\"Compare model responses with and without thinking\"\"\"\n",
+        "    \n",
+        "    # With thinking\n",
+        "    payload_think = {\n",
+        "        \"model\": \"nvidia/nvidia-nemotron-nano-9b-v2\",\n",
+        "        \"messages\": [\n",
+        "            {\"role\": \"system\", \"content\": \"/think\"},\n",
+        "            {\"role\": \"user\", \"content\": question}\n",
+        "        ],\n",
+        "        \"temperature\": 0.6,\n",
+        "        \"top_p\": 0.95,\n",
+        "        \"max_tokens\": 2048,\n",
+        "        \"min_thinking_tokens\": 512,\n",
+        "        \"max_thinking_tokens\": 2048\n",
+        "    }\n",
+        "    \n",
+        "    # Without thinking\n",
+        "    payload_no_think = {\n",
+        "        \"model\": \"nvidia/nvidia-nemotron-nano-9b-v2\",\n",
+        "        \"messages\": [\n",
+        "            {\"role\": \"user\", \"content\": f\"/no_think {question}\"}\n",
+        "        ],\n",
+        "        \"temperature\": 0.6,\n",
+        "        \"top_p\": 0.95,\n",
+        "        \"max_tokens\": 2048\n",
+        "    }\n",
+        "    \n",
+        "    print(f\"Question: {question}\\n\")\n",
+        "    print(\"🧠 WITH THINKING:\")\n",
+        "    print(\"-\" * 80)\n",
+        "    \n",
+        "    response = requests.post(url, json=payload_think, headers={'Content-Type': 'application/json'})\n",
+        "    if response.status_code == 200:\n",
+        "        result = response.json()\n",
+        "        print(result['choices'][0]['message']['content'][:500] + \"...\" if len(result['choices'][0]['message']['content']) > 500 else result['choices'][0]['message']['content'])\n",
+        "        think_tokens = result.get('usage', {})\n",
+        "    else:\n",
+        "        print(f\"Error: {response.status_code}\")\n",
+        "        think_tokens = {}\n",
+        "    \n",
+        "    print(\"\\n\\n💨 WITHOUT THINKING:\")\n",
+        "    print(\"-\" * 80)\n",
+        "    \n",
+        "    response = requests.post(url, json=payload_no_think, headers={'Content-Type': 'application/json'})\n",
+        "    if response.status_code == 200:\n",
+        "        result = response.json()\n",
+        "        print(result['choices'][0]['message']['content'][:500] + \"...\" if len(result['choices'][0]['message']['content']) > 500 else result['choices'][0]['message']['content'])\n",
+        "        no_think_tokens = result.get('usage', {})\n",
+        "    else:\n",
+        "        print(f\"Error: {response.status_code}\")\n",
+        "        no_think_tokens = {}\n",
+        "    \n",
+        "    print(\"\\n\\n📊 TOKEN COMPARISON:\")\n",
+        "    print(\"-\" * 80)\n",
+        "    print(f\"With thinking:    {json.dumps(think_tokens, indent=2)}\")\n",
+        "    print(f\"Without thinking: {json.dumps(no_think_tokens, indent=2)}\")\n",
+        "\n",
+        "# Test with a logic puzzle\n",
+        "compare_thinking_modes(\n",
+        "    \"A farmer has 17 sheep, and all but 9 die. How many sheep are left?\"\n",
+        ")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "### Example 4: Streaming with Thinking Tokens\n",
+        "# You can also stream the response to see tokens as they're generated\n",
+        "\n",
+        "print(\"🌊 STREAMING MODE - Watch the model think and respond in real-time!\\n\")\n",
+        "print(\"=\" * 80)\n",
+        "\n",
+        "payload_stream = {\n",
+        "    \"model\": \"nvidia/nvidia-nemotron-nano-9b-v2\",\n",
+        "    \"messages\": [\n",
+        "        {\"role\": \"system\", \"content\": \"/think\"},\n",
+        "        {\"role\": \"user\", \"content\": \"Explain the concept of recursion with a simple example.\"}\n",
+        "    ],\n",
+        "    \"temperature\": 0.6,   \n",
+        "    \"top_p\": 0.95,\n",
+        "    \"max_tokens\": 2048,\n",
+        "    \"min_thinking_tokens\": 256,\n",
+        "    \"max_thinking_tokens\": 1024,\n",
+        "    \"stream\": True\n",
+        "}\n",
+        "\n",
+        "response = requests.post(\n",
+        "    url, \n",
+        "    json=payload_stream, \n",
+        "    headers={'Content-Type': 'application/json'},\n",
+        "    stream=True\n",
+        ")\n",
+        "\n",
+        "if response.status_code == 200:\n",
+        "    full_response = \"\"\n",
+        "    for line in response.iter_lines():\n",
+        "        if line:\n",
+        "            line = line.decode('utf-8')\n",
+        "            if line.startswith('data: '):\n",
+        "                data = line[6:]  # Remove 'data: ' prefix\n",
+        "                if data.strip() == '[DONE]':\n",
+        "                    break\n",
+        "                try:\n",
+        "                    chunk = json.loads(data)\n",
+        "                    if 'choices' in chunk and len(chunk['choices']) > 0:\n",
+        "                        delta = chunk['choices'][0].get('delta', {})\n",
+        "                        content = delta.get('content', '')\n",
+        "                        if content:\n",
+        "                            print(content, end='', flush=True)\n",
+        "                            full_response += content\n",
+        "                except json.JSONDecodeError:\n",
+        "                    pass\n",
+        "    \n",
+        "    print(\"\\n\" + \"=\" * 80)\n",
+        "    print(\"✓ Streaming complete!\")\n",
+        "else:\n",
+        "    print(f\"Error: {response.status_code} - {response.text}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "### Example 5: Custom Thinking Function\n",
+        "# Here's a reusable function for easy experimentation with thinking parameters\n",
+        "\n",
+        "def ask_with_thinking(\n",
+        "    question, \n",
+        "    enable_thinking=True,\n",
+        "    max_tokens=2048,\n",
+        "    min_thinking_tokens=512,\n",
+        "    max_thinking_tokens=2048,\n",
+        "    temperature=0.6,\n",
+        "    top_p=0.95,\n",
+        "    stream=False\n",
+        "):\n",
+        "    \"\"\"\n",
+        "    Ask the model a question with optional thinking mode.\n",
+        "    \n",
+        "    Args:\n",
+        "        question: The question to ask\n",
+        "        enable_thinking: Whether to enable thinking mode (default: True)\n",
+        "        max_tokens: Maximum tokens for the response\n",
+        "        min_thinking_tokens: Minimum thinking tokens (if thinking enabled)\n",
+        "        max_thinking_tokens: Maximum thinking tokens (if thinking enabled)\n",
+        "        temperature: Sampling temperature\n",
+        "        top_p: Nucleus sampling parameter\n",
+        "        stream: Whether to stream the response\n",
+        "    \"\"\"\n",
+        "    url = 'http://localhost:8000/v1/chat/completions'\n",
+        "    \n",
+        "    if enable_thinking:\n",
+        "        payload = {\n",
+        "            \"model\": \"nvidia/nvidia-nemotron-nano-9b-v2\",\n",
+        "            \"messages\": [\n",
+        "                {\"role\": \"system\", \"content\": \"/think\"},\n",
+        "                {\"role\": \"user\", \"content\": question}\n",
+        "            ],\n",
+        "            \"temperature\": temperature,\n",
+        "            \"top_p\": top_p,\n",
+        "            \"max_tokens\": max_tokens,\n",
+        "            \"min_thinking_tokens\": min_thinking_tokens,\n",
+        "            \"max_thinking_tokens\": max_thinking_tokens,\n",
+        "            \"stream\": stream\n",
+        "        }\n",
+        "    else:\n",
+        "        payload = {\n",
+        "            \"model\": \"nvidia/nvidia-nemotron-nano-9b-v2\",\n",
+        "            \"messages\": [\n",
+        "                {\"role\": \"user\", \"content\": f\"/no_think {question}\"}\n",
+        "            ],\n",
+        "            \"temperature\": temperature,\n",
+        "            \"top_p\": top_p,\n",
+        "            \"max_tokens\": max_tokens,\n",
+        "            \"stream\": stream\n",
+        "        }\n",
+        "    \n",
+        "    response = requests.post(url, json=payload, headers={'Content-Type': 'application/json'})\n",
+        "    \n",
+        "    if response.status_code == 200:\n",
+        "        result = response.json()\n",
+        "        return result['choices'][0]['message']['content'], result.get('usage', {})\n",
+        "    else:\n",
+        "        return f\"Error: {response.status_code} - {response.text}\", {}\n",
+        "\n",
+        "# Test it out!\n",
+        "question = \"Write a Python function that finds the longest palindrome in a string.\"\n",
+        "answer, usage = ask_with_thinking(question, enable_thinking=True)\n",
+        "\n",
+        "print(f\"Q: {question}\\n\")\n",
+        "print(f\"A: {answer}\\n\")\n",
+        "print(f\"Token usage: {json.dumps(usage, indent=2)}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Step 9: Cleanup (Optional)\n",
         "\n",
         "When you're done, you can stop and remove the container.\n"
       ]
